<resources>
    <string name="app_name">Math Star</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="game_selection">Select your game mode</string>
    <string name="back">Back</string>
    <string name="title">Math Star</string>
    <string name="tagline">\?Load</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="exit">Exit</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
    <string name="easy">Easy</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="score">Score 0/10</string> <!-- HERE -->
    <string name="questionCount">Q 1/10</string> <!-- HERE -->
    <string name="timer">Time</string> <!-- HERE -->
    <string name="time_up">Time up</string>
    <string name="question">x ? x</string> <!-- HERE -->
    <string name="input_hint">Enter text here</string>
    <string name="enter_btn">ENTER</string>
    <string name="tick">✓</string>
    <string name="score_update_add1">Score + 1</string>
    <string name="cross">✖</string>
    <string name="score_update_minus1">Score - 1</string>
    <string name="end_score">Score</string>
    <string name="end_well_done">Well done</string>
    <string name="done">Done</string>

    <string name="operator"></string>

</resources>