<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Math.DifficultyActivity"
    android:orientation="vertical"
    android:background="@color/b_blue">

    <!-- Back button -->
    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/back"
        tools:ignore="MissingConstraints" />

    <!-- Easy -->
    <Button
        android:id="@+id/easy"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:text="@string/easy"
        android:textSize="40sp"
        android:textStyle="bold"
        android:backgroundTint="@color/green"/>

<!--    Medium-->
    <Button
        android:id="@+id/medium"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:text="@string/medium"
        android:textSize="40sp"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"/>


<!--    Hard-->
    <Button
        android:id="@+id/hard"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:text="@string/hard"
        android:textSize="40sp"
        android:textStyle="bold"
        android:backgroundTint="@color/red"/>
</LinearLayout>